# py_bandcamp

./: .gitignore  CHANGELOG.md  pyproject.toml  readme.md
.github/workflows/: build-tests.yml  build_tests.yml  coverage.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml
docs/: bandcamp_api.md
examples/: album_browse.py  artist_browse.py  recommendations.py  search.py  track_stream.py
py_bandcamp/: __init__.py  models.py  session.py  utils.py  version.py
test/: test_import.py  test_models_utils.py  test_parsing.py
