[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_bandcamp"
dynamic = ["version"]
description = "Bandcamp data scraper"
license = { text = "Apache-2.0" }
authors = [{ name = "jarbasAI", email = "jarbasai@mailfence.com" }]
requires-python = ">=3.8"
dependencies = ["beautifulsoup4", "requests", "requests-cache"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/OpenJarbas/py_bandcamp"

[tool.setuptools.dynamic]
version = { attr = "py_bandcamp.version.__version__" }

[tool.setuptools.packages.find]
include = ["py_bandcamp*"]
